# homepost

./: .gitignore  CMakeLists.txt  README.md  homepost.code-workspace  sdkconfig
.github/: copilot-instructions.md
.github/prompts/: plan-displayStoredValuesInWebUi.prompt.md  plan-makeMqttTopicConfigurable.prompt.md  plan-otaUpdateSupport.prompt.md
.github/workflows/: homepost_main_build_release.yml  homepost_pr_build.yml
github/workflows/: homepost_pr_build.yml
hardware/: homepost.kicad_pcb  homepost.kicad_pro  homepost.kicad_sch
hardware/manufacturing/: homepost-B_Cu.gbr  homepost-B_Mask.gbr  homepost-B_Paste.gbr  homepost-B_Silkscreen.gbr  homepost-Edge_Cuts.gbr  homepost-F_Cu.gbr  homepost-F_Mask.gbr  homepost-F_Paste.gbr  homepost-F_Silkscreen.gbr  homepost-job.gbrjob  homepost.drl
inc/: ble_ibeacon.h  ble_scanner.h  bt_scanner.h  geiger_counter.h  http_server.h  htu21_sensor.h  internal_storage.h  mqtt_connection.h  ota_update.h  tracker_scanner.h  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  ble_ibeacon.c  ble_scanner.c  bt_scanner.c  geiger_counter.c  http_server.c  htu21_sensor.c  internal_storage.c  main.c  mqtt_connection.c  ota_update.c  tracker_scanner.c  wifi.c
main/web/: index.html
